[metadata]
name = ip_remove
version = 0.0.2
description = a CLI to remove ip-addresses from a file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/ip-remove
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = ip_remove
install_requires =
    importlib-metadata;python_version<"3.8"
    typing-extensions;python_version<"3.8"
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ip-remove = ip_remove:main

[bdist_wheel]
universal = True

[coverage:run]
parallel = True
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
